k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soen343-web
  namespace: soen343
spec:
  selector:
    app: soen343
  ports:
    - port: 80
      targetPort: 8000
