k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soen343-web
  namespace: soen343
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: soen343.adam-ousmer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soen343-web
                port:
                  number: 80
